--- a/src/app/components/Token.css
+++ b/src/app/components/Token.css
@@ -6,17 +6,17 @@
   flex-basis: 0;
   flex-grow: 1;
   justify-content: center;
-  margin: 0.75vmin;
+  margin: var(--token-margin);
   position: relative;
   transform-style: preserve-3d;
-  transition: transform 150ms ease-in;
 }
-/* .token::before {
+.token::before {
   background-color: var(--white);
   content: '';
+  inset: 1px;
   position: absolute;
   transform: translateZ(-1px);
-} */
+}
 
 .token svg {
   aspect-ratio: 1;
@@ -24,5 +24,5 @@
   stroke: var(--stroke-color);
   stroke-linecap: round;
   stroke-miterlimit: 0;
-  stroke-width: 0.5px;
+  stroke-width: 1px;
 }
