--- a/src/app/components/App.css
+++ b/src/app/components/App.css
@@ -37,8 +37,11 @@
 }
 
 .header {
+  align-items: center;
   display: flex;
+  gap: 4px;
   height: var(--controls-size);
+  justify-content: flex-end;
   width: 100%;
 }
 .header::after {
@@ -50,6 +53,32 @@
   position: absolute;
   right: 0;
   top: var(--controls-size);
+}
+.header-button {
+  align-items: center;
+  border-color: transparent;
+  border-radius: 2px;
+  border-style: solid;
+  border-width: 1px;
+  cursor: pointer;
+  display: flex;
+  flex-wrap: nowrap;
+  gap: calc(var(--padding) / 2);
+  height: 100%;
+  margin: calc(var(--padding) / 2);
+  min-height: var(--padding);
+  min-width: var(--padding);
+  padding: calc(var(--padding) / 2);
+  transition: border-color 150ms ease;
+}
+.header-button:hover {
+  border-color: var(--stroke-color);
+}
+.header-button-text {
+  font-family: monospace;
+  font-size: 13px;
+  line-height: 13px;
+  white-space: nowrap;
 }
 
 .main {
@@ -78,4 +107,26 @@
   height: var(--aside-height);
   max-width: var(--aside-max-width);
   width: var(--aside-width);
+}
+
+.candidate-token {
+  position: absolute;
+  right: 2px;
+  top: var(--token-margin);
+  width: 37%;
+}
+
+.candidate-token .token {
+  margin: 0;
+}
+
+@media screen and (max-width: 399px) {
+  .hide-for-mobile {
+    display: none;
+  }
+}
+@media screen and (min-width: 400px) {
+  .hide-for-desktop {
+    display: none;
+  }
 }
