--- a/src/app/root.css
+++ b/src/app/root.css
@@ -22,6 +22,7 @@
   --locked: #dfdfdf;
   --menu-color: #7c7c81;
   --stroke-color: #444444;
+  --stroke-color-alpha: #44444444;
   --text-color: #222222;
   --border-color: #000000;
   --error-color: #ff4b56;
